[package]
name = "socks-lib"
version = "0.1.5"
edition = "2024"
description = "A library compliant with the SOCKS protocol standard"
keywords = ["socks", "proxy", "firewall"]
license = "Apache-2.0"
authors = ["Contributors"]
repository = "https://github.com/ombrac/socks-lib"

[features]
default = []
tracing = ["dep:tracing"]

[dependencies]
bytes = { version = "1", default-features = false }
tokio = { version = "1", features = ["io-util", "net", "rt", "macros", "time"], default-features = false }
thiserror = { version = "2", default-features = false }
tracing = { version = "0.1", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full"], default-features = false }
tokio-rustls = { version = "0.26", features = ["aws-lc-rs"], default-features = false }
rustls-pemfile = { version = "2", default-features = false }
rcgen = { version = "0.13", features = ["crypto", "aws_lc_rs"], default-features = false }
hyper = { version = "1.6", features = ["server", "http2"], default-features = false }
hyper-util = { version = "0.1", features = ["tokio"], default-features = false }
http-body-util = { version = "0.1", default-features = false }
curl = { version = "0.4", features = ["ssl", "http2"], default-features = false }
